# ruswift

./: .gitmodules  Dockerfile  docker-compose.yml  main.py  supervisord.conf
app/: clearstatic.py  pyproject.toml  requirements.txt
app/api/: __init__.py  account.py  auth.py  autocomplete.py  base.py  directions.py  kyc.py  ledgers.py  mass_payment.py  orders.py  ratios.py  routers.py  storage.py  utils.py
app/cache/: __init__.py  base.py
app/context/: __init__.py
app/core/: __init__.py  google.py  telegram.py  utils.py
app/entities/: __init__.py  auth.py  base.py  config.py  kyc.py  mass_payment.py  order.py  p2p.py  storage.py
app/exchange/: models.py
app/exchange/migrations/: 0001_initial.py  0002_alter_currency_icon_alter_network_icon_and_more.py  (+50 more)
app/kyc/: __init__.py  base.py  beorg.py  fake.py  mts.py
app/merchants/: __init__.py  config.py  entities.py  ratios.py
app/microledger/: __init__.py  base.py  consensus.py  mass_payment.py  payment_request.py
app/ratios/: __init__.py  abcex.py  base.py  bestchange.py  cex.py  coinmarketcap.py  forex.py  garantex.py
app/reports/: __init__.py  base.py  qugo.py
app/reposiroty/: __init__.py  base.py  config.py  kyc.py  repos.py  storage.py  utils.py
app/settings/: asgi.py  base.py  local.py  urls.py
app/templates/: 404.html  base.html  index.html  kyc.html  login.html  simple.base.html
app/tests/: conftest.py  pytest.ini  test_api.py  test_cache.py  test_config.py  test_kyc.py  test_merchants.py  test_microledgers.py  test_ratios.py  test_reports.py  test_ui.py
app/ui/: landing.py  views.py
(+52 files in other folders)
