[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
django = "^4.1.7"
channels = "^4.0.0"
daphne = "^4.0.0"
websocket-client = "^1.5.1"
psycopg2 = "^2.9.5"
pytest-django = "^4.5.2"
pymemcache = "^4.0.0"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
binance-connector = "^2.0.0"
python-okx = "^0.1.8"
aiohttp = "^3.8.4"
pybit = "^5.2.0"
aio-pika = "^9.0.7"
dataclasses-json = "^0.5.7"
pytest-asyncio = "^0.21.0"
aioredis = "^2.0.1"
networkx = "^3.1"
channels-redis = "^4.1.0"
chaostoolkit-toxiproxy = "^0.3.1"
redis = {extras = ["hiredis"], version = "^4.5.5"}
asyncio-gevent = "^0.2.3"
fake-useragent = "^1.1.3"
aiohttp-socks = "^0.8.0"
beautifulsoup4 = "^4.12.2"
stem = "^1.8.2"
pydantic = "^2.0.3"
kucoin-python = "^1.0.14"
pydantic-yaml = "^1.1.1"
requests = {extras = ["socks"], version = "^2.31.0"}
sentry-sdk = "^1.31.0"
numpy = "^1.26.1"
sortedcontainers = ">=2.4.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-magic = "^0.4.27"
fpdf = "^1.7.2"
jinja2 = "^3.1.4"
xlsxwriter = "^3.2.0"
google-api-python-client = "^2.154.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
